chore: Update vercel.json to include Python 3.11 runtime

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,8 @@
         "src": "fastapi/main.py",
         "use": "@vercel/python",
         "config": {
-          "maxLambdaSize": "50mb"
+          "maxLambdaSize": "50mb",
+          "runtime": "python3.11.0"
         }
       }
     ],
